# pokemonCPPRefactor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Google_tests/: BatallaTests.cpp  CMakeLists.txt  FacadeTests.cpp
